--- a/index.html
+++ b/index.html
@@ -19,19 +19,31 @@
         <div id="timeSecond">
             <span onClick="timeAdd(2)"><button id="timeButton"><p id="timeButtonP">+1 second</p></button></span>
         </div>
+        <div id="timeMinuteRemove">
+            <span onClick="timeAdd(-1)"><button id="timeButton"><p id="timeButtonP">-1 minute</p></button></span>
+        </div>
+        <div id="timeSecondRemove">
+            <span onClick="timeAdd(-2)"><button id="timeButton"><p id="timeButtonP">-1 second</p></button></span>
+        </div>
     </div>
     <footer><div id="footerCredit"><p style="margin:0;">Demo by <a target="_blank" href="https://youtube.com/casperthepancake">CasperThePancake</a></p></div></footer>
     <script>
         var counting = 0;
-        var minutes = 100;
-        var seconds = 10;
-        updateTimer(1);
+        var minutes = 5;
+        var seconds = 0;
+        updateTimer(0);
         function updateTimer(force) {
-            if (counting == 0 && force == 0) return;
-            if (force !== 2) {
+            if (seconds + minutes == 0 && counting == 1) {
+                toggleControl();
+                var audio = new Audio('assets/alarm.mp3');
+                audio.play();
+            }
+            if (counting == 1 && force !== 1 && seconds + minutes !== 0) {
             if (seconds == 1) {
                 document.getElementById("countdownText").classList = "alert"
             } else {document.getElementById("countdownText").classList = ""}
+            var audio = new Audio('assets/tick.mp3');
+            audio.play();
             if (seconds == 0) {
                 seconds = 59;
                 minutes -= 1;
@@ -52,22 +64,17 @@
             }
             document.getElementById("countdownText").innerHTML = minutesDis+":"+secondsDis
             //run again
-            if (counting == 1 && force == 0) {
-                if (minutes + seconds !=0) {
-                    setTimeout(() => {  updateTimer(0); }, 1000);
-                } else {
-                    counting = 0;
-                }
+            if (force == 0) {
+                setTimeout(() => {  updateTimer(0); }, 1000);
             }
         }
         function toggleControl() {
             console.log("Toggle!")
-            if (counting == 0) {
+            if (counting == 0 && seconds + minutes !== 0) {
                 counting = 1;
                 document.getElementById("buttonControlP").innerHTML = "Stop"
                 document.getElementById("buttonControlB").classList = "on"
                 console.log("Started countdown!")
-                updateTimer(0)
             } else {
                 counting = 0;
                 document.getElementById("buttonControlP").innerHTML = "Start"
@@ -78,15 +85,36 @@
         function timeAdd(type) {
             if (type == 1) {
                 minutes += 1;
-            } else {
+            } else if (type == 2) {
                 if (seconds == 59) {
                     seconds = 0;
                     minutes += 1;
                 } else {
                     seconds += 1;
+                    document.getElementById("countdownText").classList = ""
                 }
             }
-            updateTimer(2)
+            if (type == -1) {
+                if (minutes !== 0) {
+                minutes -= 1 } else {
+                    minutes = 0;
+                    seconds = 0;
+                }
+            } else if (type == -2) {
+                if (seconds == 0 && minutes !== 0) {
+                    seconds = 59;
+                    minutes -= 1;
+                } else if (seconds + minutes !== 0) {
+                    seconds -= 1;
+                    document.getElementById("countdownText").classList = ""
+                }
+            }
+            //maximum
+            if (minutes > 99) {
+                minutes = 99;
+                seconds = 59;
+            }
+            updateTimer(1)
         }
     </script>
 </body>
